# anynote_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.db.yaml  docker-compose.yaml  pyproject.toml  tasks.py
.github/workflows/: commit.yaml
scripts/: production_data.py  setup_environment.py
src/: conftest.py  manage.py
src/anynote/: apps.py
src/api/: urls.py
src/api/v1/anynote/: __init__.py  urls.py
src/api/v1/authentication/: __init__.py  urls.py
src/apps/anynote/: admin.py  apps.py  models.py  services.py  urls.py
src/apps/anynote/api/: __init__.py  serializers.py  views.py
src/apps/anynote/migrations/: 0001_initial.py  0002_initial.py
src/apps/authentication/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/authentication/api/: __init__.py  serializers.py  utils.py  views.py
src/apps/authentication/migrations/: 0001_initial.py
src/authentication/: apps.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: __init__.py  app_specific.py  base.py  docker.py  environment.py  logging.py  rest_framework.py
src/config/settings/templates/: settings.dev.py  settings.github.py  settings.prod.py  settings.testing.py
src/general/tests/: pytest.py
src/general/tests/fixtures/: __init__.py  secret_key.py
src/general/utils/: collections.py  environment.py  yaml.py
src/tests/: conftest.py  test_readme.py
src/tests/fixtures/: __init__.py  api_client.py  secret_key.py
src/tests/test_anynote/: test_note_api.py
src/tests/test_authentication/: test_registration.py
